--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,6 +1,6 @@
 ---
 const {
-	title = 'Carlos Montero - Online Portfolio',
+	title = 'Carlos Montero - Full Stack Web Developer',
 	description = 'The home of all projects and work done by Carlos Montero.',
 } = Astro.props;
 ---
