--- a/src/layouts/project.astro
+++ b/src/layouts/project.astro
@@ -1,7 +1,6 @@
 ---
-// Component Imports
-import MainHead from '../components/MainHead.astro';
-import Hero from '../components/Hero.astro';
+import MainHead from "../components/MainHead.astro";
+import Hero from "../components/Hero.astro";
 
 const pageTitle = "Home"
 
@@ -67,6 +66,8 @@ const sideContent = [
 		content: skills
 	}
 ]
+
+const {content} = Astro.props
 ---
 
 <html lang="en">
@@ -74,6 +75,7 @@ const sideContent = [
 		<MainHead	/>
 	</head>
 	<body>
-		<Hero pageTitle={pageTitle} navItems={navItems} sideContent={sideContent} />
+		{content}
+		<!-- <Hero pageTitle={pageTitle} navItems={navItems} sideContent={sideContent} /> -->
 	</body>
 </html>
