--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,6 +1,8 @@
 ---
+import '../styles/style.css'
+
 const {
-	title = 'Carlos Montero - Full Stack Web Developer',
+	title = 'Carlos D. Montero - Full Stack Web Developer',
 	description = 'The home of all projects and work done by Carlos Montero.',
 } = Astro.props;
 ---
