--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,13 +8,35 @@ type NavProps = {
 	items: NavItem[];
 };
 
-const { items } = Astro.props as NavProps;
+const navItems = [
+	{
+		label: "Home",
+		path: "/"
+	},
+	{
+		label: "Projects",
+		path: "/projects"
+	},
+	{
+		label: "Resume",
+		path: "/resume"
+	},
+	{
+		label: "About",
+		path: "/about"
+	},
+	{
+		label: "Contact",
+		path: "/contact"
+	},
+];
+
 ---
 
 <div id="nav-items" class="flex flex-col gap-[1px]">
 	{
-		items.map((item, index) => (
-			<div key={`nav-item-${index}`} class="flex gap-[1px]">
+		navItems.map((item, index) => (
+			<div class="flex gap-[1px]">
 				<div class="w-[1px] bg-black h-[40px] mr-[1px]" />
 				<a
 					href={item.path}
@@ -40,7 +62,7 @@ const { items } = Astro.props as NavProps;
 							z-10
 							relative
 							bg-gradient-to-r
-							from-black
+							from-[#1c1c1c]
 							to-transparent
 							w-full
 							px-4
