--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,18 +1,23 @@
 ---
 import Nav from "../components/Nav.astro";
-import Heading from "../components/Elements/Heading.astro";
-import Table from "../components/Elements/Table.astro";
 
-interface TableContents {
+interface StripedTableContents {
 	label: string;
 	value: any;
 }
 
-interface SideContent {
+interface StripedTable {
 	type: "table";
 	heading: string;
 	name: string;
-	content: TableContents[];
+	content: StripedTableContents[];
+}
+
+interface TextContainer {
+	type: "text";
+	heading: string;
+	name: string;
+	content: string;
 }
 
 interface NavItem {
@@ -23,64 +28,37 @@ interface NavItem {
 type HeroProps = {
 	pageTitle: string;
 	navItems: NavItem[];
-	sideContent: SideContent[];
+	sideContent: (StripedTable | TextContainer)[];
 };
 
 const {
-	pageTitle = "Home",
-	navItems = [],
-	sideContent = [],
+	pageTitle = "Home"
 } = Astro.props as HeroProps;
 
 ---
 
 <div
-	class="bg-gradient-to-br from-emerald-700 via-black to-black animate-emerald-gradient-bg h-screen outline outline-1 outline-offset-2 outline-emerald-500"
+	class="bg-gradient-to-br from-emerald-700 via-black to-black animate-emerald-gradient-bg h-screen"
 >
-	<div class="p-8 w-full h-full">
-		<div class="bg-emerald-200 bg-opacity-10 w-full h-full flex p-2">
-			<div class="relative w-[50px]">
+	<div class="p-8 w-full h-full ">
+		<div class="bg-emerald-200 bg-opacity-10 w-full h-full grid grid-cols-[50px_auto] p-2 outline outline-1 outline-offset-4 outline-emerald-600 overflow-hidden">
+			<div class="relative w-[50px] ">
 				<div
-					class="absolute -top-8 left-1 font-thin text-white text-4xl inline-block rotate-90 origin-bottom-left"
+					class="absolute -top-8 left-1 font-thin text-white text-4xl inline-block rotate-90 origin-bottom-left whitespace-nowrap"
 				>
 					{pageTitle}
 				</div>
 			</div>
-			<div class="p-2 w-full h-full bg-emerald-500 bg-opacity-20 flex gap-4">
-				<div id="content-col" class="w-full max-w-xs flex flex-col gap-4">
-					<Nav items={navItems} />
-					{
-						sideContent.map((item, index) => {
-							if (item.type === "table") {
-								return (
-									<Table
-										heading={item.heading}
-										name={item.name}
-										items={item.content}
-									/>
-								);
-							}
-						})
-					}
+			<div class="bg-emerald-500 bg-opacity-20 flex gap-4 overflow-hidden py-4">
+				<div id="content-col" class="px-4 w-[300px] flex-shrink-0 flex flex-col gap-4">
+					<Nav />
+					<slot name='side-content' />
 				</div>
 				<div
 					id="content-ctn"
-					class="flex flex-1 justify-center items-center relative"
+					class="w-full projects-list overflow-y-hidden"
 				>
-					<Heading icon="blank" heading="Carlos Montero" subheading="Full Stack Web Developer" />
-					<div
-						class="absolute w-full h-full max-w-[400px] max-h-[400px] -rotate-45"
-					>
-						<img
-							src="/assets/profile_photo.png"
-							class="absolute rotate-45 z-0 opacity-60"
-							alt=""
-						/>
-						<div
-							class="w-full h-full bg-gradient-to-br from-emerald-300 via-transparent outline outline-1 outline-white outline-offset-2 opacity-40"
-						>
-						</div>
-					</div>
+					<slot name='main-content' />
 				</div>
 			</div>
 		</div>
