--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -33,7 +33,7 @@ const navItems = [
 
 ---
 
-<div id="nav-items" class="flex flex-col gap-[1px]">
+<div id="nav-items" class=" hidden sm:flex flex-col gap-[1px]">
 	{
 		navItems.map((item, index) => (
 			<div class="flex gap-[1px]">
