--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,7 @@
 ---
 import SidebarText from "../components/Elements/SidebarText.astro";
 import Hero from "../components/Hero.astro";
-import ContactForm from "../components/ContactForm.tsx";
+import ContactForm from "../components/ContactForm";
 import MainHead from "../components/MainHead.astro";
 import { Icon } from 'astro-icon'
 import { Content as AboutMe } from "../content/about-me.md";
@@ -69,14 +69,14 @@ const socialLinks = [
 				}
 			</div>
 			<div slot="main-content" class="w-full h-full text-white">
-				<div class=" max-w-xl">
-					<h2 class="mt-0">Feel free to message me via any platform you prefer.</h2>
+				<div class=" max-w-xl px-4">
+					<h2 class="mt-0">Feel free to message me any way you prefer.</h2>
 					<p class="mb-0">I'll get back to you as soon as possible!</p>
-					<div class="flex">
-						<a href="tel:8134516954" class="flex items-center flex-1 py-4 transition-all hover:text-emerald-300" target="_blank" rel="noopener noreferrer">
+					<div class="flex flex-col sm:flex-row">
+						<a href="tel:8134516954" class="flex items-center flex-1 py-2 sm:py-4 transition-all hover:text-emerald-300" target="_blank" rel="noopener noreferrer">
 							<Icon name="mdi:phone" class='max-w-[20px] mr-2' /> (813)-451-6954
 						</a>
-						<a href="mailto:cdm.vfx@gmail.com" class="flex items-center flex-1 py-4 transition-all hover:text-emerald-300" target="_blank" rel="noopener noreferrer">
+						<a href="mailto:cdm.vfx@gmail.com" class="flex items-center flex-1 py-2 mb-2 sm:py-4 transition-all hover:text-emerald-300" target="_blank" rel="noopener noreferrer">
 							<Icon name="mdi:email" class='max-w-[20px] mr-2' /> cdm.vfx@gmail.com
 						</a>
 					</div>
