--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -30,7 +30,7 @@ const projects = [
 			"Web app integrated with Amazon for creating forms to incentivize product feedback.",
 		path: "/projects/reviewget",
 		icon: "reviewget",
-		photo: "/assets/reviewget.png",
+		photo: "/assets/reviewget_1.png",
 		stack: ["React", "ChakraUI", "NextJS", "MongoDB"],
 	},
 	{
