--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,25 +38,25 @@ const {
 ---
 
 <div
-	class="bg-gradient-to-br from-emerald-700 via-black to-black animate-emerald-gradient-bg h-screen"
+	class="bg-gradient-to-br from-emerald-700 via-black to-black animate-emerald-gradient-bg h-full sm:h-screen"
 >
-	<div class="p-8 w-full h-full ">
-		<div class="bg-emerald-200 bg-opacity-10 w-full h-full grid grid-cols-[50px_auto] p-2 outline outline-1 outline-offset-4 outline-emerald-600 overflow-hidden">
-			<div class="relative w-[50px] ">
+	<div class="p-4 xl:p-8 w-full h-full ">
+		<div class="bg-emerald-200 bg-opacity-10 w-full h-full md:grid md:grid-cols-[50px_auto] p-2 outline outline-1 outline-offset-4 outline-emerald-600 xl:overflow-hidden">
+			<div class="relative w-[50px] mb-4">
 				<div
-					class="absolute -top-8 left-1 font-thin text-white text-4xl inline-block rotate-90 origin-bottom-left whitespace-nowrap"
+					class="md:absolute -top-8 left-1 font-thin text-white text-4xl inline-block md:rotate-90 origin-bottom-left whitespace-nowrap"
 				>
 					{pageTitle}
 				</div>
 			</div>
-			<div class="bg-emerald-500 bg-opacity-20 flex gap-4 overflow-hidden py-4">
-				<div id="content-col" class="px-4 w-[300px] flex-shrink-0 flex flex-col gap-4">
+			<div class="bg-emerald-500 max-w-full h-full bg-opacity-20 flex flex-col-reverse sm:flex-row gap-4 sm:overflow-hidden py-4">
+				<div id="content-col" class="px-4 w-full sm:w-[300px] flex-shrink-0 flex flex-col gap-4">
 					<Nav />
 					<slot name='side-content' />
 				</div>
 				<div
 					id="content-ctn"
-					class="w-full projects-list overflow-y-hidden"
+					class="w-full projects-list sm:overflow-y-hidden"
 				>
 					<slot name='main-content' />
 				</div>
