--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -23,7 +23,7 @@ import { Icon } from 'astro-icon'
 				<a href="/files/Carlos Montero Resume.pdf" download class='btn mr-4 w-full tracking-widest text-sm text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500' style='color: white; text-decoration: none;'>
 					<div class="flex justify-center items-center gap-2">
 						<Icon name="mdi:download" class='w-[2em]' />
-						Download Resume
+						Download resume
 					</div>
 				</a>
 			</SidebarText>
