fixed mobile stuff

--- a/src/components/Elements/Diamond.astro
+++ b/src/components/Elements/Diamond.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from 'astro-icon'
 
-const { heading, subheading, tags, photo, icon } = Astro.props;
+const { heading = "NO HEADING", subheading = "NO SUBHEADING", tags = [], photo = "", icon = "cdmvfx" } = Astro.props;
 ---
 
 <style>
