--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,7 @@
 ---
 import Nav from "../components/Nav.astro";
+import MobileNav from "../components/MobileNav";
+import { Icon } from 'astro-icon'
 
 interface StripedTableContents {
 	label: string;
@@ -42,11 +44,12 @@ const {
 >
 	<div class="p-4 xl:p-8 w-full h-full ">
 		<div class="bg-emerald-200 bg-opacity-10 w-full h-full md:grid md:grid-cols-[50px_auto] p-2 outline outline-1 outline-offset-4 outline-emerald-600 xl:overflow-hidden">
-			<div class="relative w-[50px] mb-4">
+			<div class="relative md:w-[50px] mb-4">
 				<div
-					class="md:absolute -top-8 left-1 font-thin text-white text-4xl inline-block md:rotate-90 origin-bottom-left whitespace-nowrap"
+					class="flex justify-between items-center md:inline-block md:absolute md:-top-8 md:left-1 font-thin text-white text-4xl md:rotate-90 origin-bottom-left whitespace-nowrap"
 				>
 					{pageTitle}
+					<MobileNav client:load />
 				</div>
 			</div>
 			<div class="bg-emerald-500 max-w-full h-full bg-opacity-20 flex flex-col-reverse sm:flex-row gap-4 sm:overflow-hidden py-4">
