--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const skills = [
 		<MainHead	/>
 	</head>
 	<body>
-		<Hero pageTitle={'Home'}>
+		<Hero pageTitle={'Home'} reverse={true}>
 			<div slot='side-content'>
 				<SidebarTable heading='Skills' name='skills' items={skills} />
 				<div>
