--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,38 +3,14 @@ import Nav from "../components/Nav.astro";
 import MobileNav from "../components/MobileNav";
 import { Icon } from 'astro-icon'
 
-interface StripedTableContents {
-	label: string;
-	value: any;
-}
-
-interface StripedTable {
-	type: "table";
-	heading: string;
-	name: string;
-	content: StripedTableContents[];
-}
-
-interface TextContainer {
-	type: "text";
-	heading: string;
-	name: string;
-	content: string;
-}
-
-interface NavItem {
-	label: string;
-	path: string;
-}
-
 type HeroProps = {
 	pageTitle: string;
-	navItems: NavItem[];
-	sideContent: (StripedTable | TextContainer)[];
+	reverse: boolean
 };
 
 const {
-	pageTitle = "Home"
+	pageTitle = "Home",
+	reverse = false
 } = Astro.props as HeroProps;
 
 ---
@@ -46,13 +22,13 @@ const {
 		<div class="bg-emerald-200 bg-opacity-10 w-full h-full md:grid md:grid-cols-[50px_auto] p-2 outline outline-1 outline-offset-4 outline-emerald-600 xl:overflow-hidden">
 			<div class="relative md:w-[50px] mb-4">
 				<div
-					class="flex justify-between items-center md:inline-block md:absolute md:-top-8 md:left-1 font-thin text-white text-4xl md:rotate-90 origin-bottom-left whitespace-nowrap"
+					class="flex justify-between items-center md:inline-block md:absolute md:-top-8 md:left-1 font-thin text-white text-4xl md:rotate-90 origin-bottom-left md:whitespace-nowrap"
 				>
 					{pageTitle}
 					<MobileNav client:load />
 				</div>
 			</div>
-			<div class="bg-emerald-500 max-w-full h-full bg-opacity-20 flex flex-col-reverse sm:flex-row gap-4 sm:overflow-hidden py-4">
+			<div class={`bg-emerald-500 max-w-full h-full bg-opacity-20 flex ${reverse ? "flex-col-reverse" : "flex-col"} sm:flex-row gap-4 sm:overflow-hidden py-4`}>
 				<div id="content-col" class="px-4 w-full sm:w-[300px] flex-shrink-0 flex flex-col gap-4">
 					<Nav />
 					<slot name='side-content' />
