--- a/src/layouts/project.astro
+++ b/src/layouts/project.astro
@@ -78,30 +78,10 @@ const stackIcons = {
 			[astro-icon] {
 				width: 1em;
 			}
-
-			.projects-list {
-				scrollbar-width: thin;
-			}
-
-			.projects-list::-webkit-scrollbar {
-				width: 20px;
-			}
-
-			.projects-list::-webkit-scrollbar-track {
-				background-color: #1c1c1c;
-				border-radius: 100px;
-				margin-right: 20px;
-			}
-
-			.projects-list::-webkit-scrollbar-thumb {
-				border-radius: 100px;
-				background-image: linear-gradient(90deg, #36d07b 0%, #2bac90 99%);
-				box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
-			}
 		</style>
 	</head>
 	<body>
-		<Hero pageTitle={frontmatter.title}>
+		<Hero pageTitle={frontmatter.title} reverse={true}>
 			<div slot='side-content'>
 				<div class="text-emerald-100 text-md mb-2">Tech Stack</div>
 				<div
@@ -143,24 +123,26 @@ const stackIcons = {
 					<div class='text-white project-details flex-1'>
 						<h1>{frontmatter.title}</h1>
 						<h3>{frontmatter.client ? `for ${frontmatter.client}` : 'Personal Project'}</h3>
-						{
-							frontmatter.view &&
-							<a href={frontmatter.view} target="_blank" class='btn mr-4 tracking-widest text-xs text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500' style='color: white; text-decoration: none;'>
-								<div class="flex justify-center items-center gap-2">
-									<Icon name="carbon:view-filled" />
-									VIEW
-								</div>
-							</a>
-						}
-						{
-							frontmatter.code &&
-							<a href={frontmatter.code} target="_blank" class='btn tracking-widest text-xs text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500' style='color: white; text-decoration: none;'>
-								<div class="flex justify-center items-center gap-2">
-									<Icon name="carbon:code" />
-									CODE
-								</div>
-							</a>
-						}
+						<div class="mb-4">
+							{
+								frontmatter.view &&
+								<a href={frontmatter.view} target="_blank" class='btn mr-4 tracking-widest text-xs text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500' style='color: white; text-decoration: none;'>
+									<div class="flex justify-center items-center gap-2">
+										<Icon name="carbon:view-filled" />
+										VIEW
+									</div>
+								</a>
+							}
+							{
+								frontmatter.code &&
+								<a href={frontmatter.code} target="_blank" class='btn tracking-widest text-xs text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500' style='color: white; text-decoration: none;'>
+									<div class="flex justify-center items-center gap-2">
+										<Icon name="carbon:code" />
+										CODE
+									</div>
+								</a>
+							}
+						</div>
 						<slot />
 					</div>
 					<div>
