--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,7 +40,7 @@ const hobbies = [
 		<MainHead />
 	</head>
 	<body>
-		<Hero pageTitle="About">
+		<Hero pageTitle="About" reverse={true}>
 			<div slot='side-content'>
 				<div class="text-emerald-100 text-md mb-2">Hobbies</div>
 				<div
@@ -77,7 +77,7 @@ const hobbies = [
 					))
 				}
 			</div>
-			<div slot="main-content" class="pr-4 w-full h-full">
+			<div slot="main-content" class="pr-4 w-full h-full overflow-auto">
 				<div class="flex flex-col xl:flex-row gap-8 px-4">
 					<div class='text-white project-details flex-1'>
 						<AboutMe.Content />
