--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,3 +32,23 @@ p {
 	color: rgb(129, 255, 183);
 	text-decoration: underline;
 }
+
+.projects-list {
+	scrollbar-width: thin;
+}
+
+.projects-list::-webkit-scrollbar {
+	width: 20px;
+}
+
+.projects-list::-webkit-scrollbar-track {
+	background-color: #1c1c1c;
+	border-radius: 100px;
+	margin-right: 20px;
+}
+
+.projects-list::-webkit-scrollbar-thumb {
+	border-radius: 100px;
+	background-image: linear-gradient(90deg, #36d07b 0%, #2bac90 99%);
+	box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+}
