--- a/src/components/Elements/Diamond.astro
+++ b/src/components/Elements/Diamond.astro
@@ -38,7 +38,7 @@ const { heading = "NO HEADING", subheading = "NO SUBHEADING", tags = [], photo =
 	<div
 		id="diamond"
 		style={`background: linear-gradient(to top right, #047857, rgba(0,0,0,0.8)), url(${photo}); background-size: cover; background-position: center; background-repeat: no-repeat;`}
-		class="rotate-45 transition w-[200px] h-[200px] lg:w-[400px] lg:h-[400px] outline outline-1 outline-emerald-300 outline-offset-2 bg-gradient-to-tr from-emerald-700 via-transparent flex justify-center items-center"
+		class="hover:scale-110 rotate-45 transition w-[200px] h-[200px] lg:w-[400px] lg:h-[400px] outline outline-1 outline-emerald-300 outline-offset-2 bg-gradient-to-tr from-emerald-700 via-transparent flex justify-center items-center"
 	>
 		<div
 			id="diamond-content"
