--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const skills = [
 			<div slot='side-content'>
 				<SidebarTable heading='Skills' name='skills' items={skills} />
 				<div>
-					<div class="text-emerald-100 text-md mb-2">Certifications</div>
+					<div class="text-emerald-100 text-md mb-2">Certificates</div>
 					<div
 						class="
 							before:absolute
@@ -80,7 +80,7 @@ const skills = [
 				<Diamond heading={'Carlos D. Montero'} subheading={'Full Stack Web Developer'} tags={[]} icon="cdmvfx">
 					<img
 						slot='background'
-						src="/assets/profile_photo_2.png"
+						src="/assets/profile_photo.webp"
 						class="absolute -rotate-45 z-0 opacity-100"
 						alt=""
 					/>
