--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,10 +16,10 @@ const {
 ---
 
 <div
-	class="bg-gradient-to-br from-emerald-700 via-black to-black animate-emerald-gradient-bg h-full sm:h-screen"
+	class="bg-gradient-to-br from-emerald-700 via-black to-black animate-emerald-gradient-bg min-h-screen h-full md:h-screen"
 >
-	<div class="p-4 xl:p-8 w-full h-full ">
-		<div class="bg-emerald-200 bg-opacity-10 w-full h-full md:grid md:grid-cols-[50px_auto] p-2 outline outline-1 outline-offset-4 outline-emerald-600 xl:overflow-hidden">
+	<div class="p-4 md:p-8 w-full h-full ">
+		<div class="bg-emerald-200 bg-opacity-10 w-full min-h-screen md:min-h-full h-full grid grid-rows-[50px_auto] md:grid-rows-1 md:grid-cols-[50px_auto] p-2 outline outline-1 outline-offset-4 outline-emerald-600">
 			<div class="relative md:w-[50px] mb-4">
 				<div
 					class="flex justify-between items-center md:inline-block md:absolute md:-top-8 md:left-1 font-thin text-white text-4xl md:rotate-90 origin-bottom-left md:whitespace-nowrap"
@@ -28,14 +28,14 @@ const {
 					<MobileNav client:load />
 				</div>
 			</div>
-			<div class={`bg-emerald-500 max-w-full h-full bg-opacity-20 flex ${reverse ? "flex-col-reverse" : "flex-col"} sm:flex-row gap-4 sm:overflow-hidden py-4`}>
+			<div class={`bg-emerald-500 max-w-full bg-opacity-20 flex ${reverse ? "flex-col-reverse" : "flex-col"} sm:flex-row gap-4 sm:overflow-auto py-4`}>
 				<div id="content-col" class="px-4 w-full sm:w-[300px] flex-shrink-0 flex flex-col gap-4">
 					<Nav />
 					<slot name='side-content' />
 				</div>
 				<div
 					id="content-ctn"
-					class="w-full projects-list sm:overflow-y-hidden"
+					class="w-full projects-list"
 				>
 					<slot name='main-content' />
 				</div>
