--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -80,9 +80,9 @@ const projects = [
 	</head>
 	<body>
 		<Hero pageTitle="Projects">
-			<SidebarText heading="Projects" slot="side-content">
+			<div class='text-white' slot='side-content'>
 				<ProjectsDesc />
-			</SidebarText>
+			</div>
 			<div slot="main-content" class="lg:hidden w-auto flex flex-col px-4 sm:px-0">
 				{
 					projects.map((project, index) => (
@@ -94,8 +94,8 @@ const projects = [
 									</div>
 								</div>
 								<div class='flex flex-col gap-2'>
-									<div class="text-xl font-thin">{project.heading}</div>
-									<div class="text-sm">{project.subheading}</div>
+									<div class="text-xl font-thin whitespace-nowrap">{project.heading}</div>
+									<div class="text-sm pt-1">{project.subheading}</div>
 									<div class="flex flex-wrap text-xs gap-x-4 gap-y-2">{project.stack.map((item, index) => (<div>{item}</div>))}</div>
 								</div>
 							</div>
@@ -106,10 +106,10 @@ const projects = [
 					))
 				}
 			</div>
-			<div slot="main-content" class="hidden lg:flex -mt-[70px] ml-[100px] scale-[75%] w-auto">
+			<div slot="main-content" class="hidden lg:flex -mt-[50px] ml-[100px] scale-[75%] w-max">
 				{
 					projects.map((project, index) => (
-						<a href={project.path} class={`${index % 2 === 0 ? "-ml-[270px]" : "-ml-[270px] mt-[295px]"} block transition hover:scale-110`}>
+						<a href={project.path} class={`${index % 2 === 0 ? "-ml-[270px]" : "-ml-[270px] mt-[295px]"} block transition `}>
 							<Diamond
 								heading={project.heading}
 								subheading={project.subheading}
