--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -2,6 +2,7 @@
 import SidebarText from "../components/Elements/SidebarText.astro";
 import Hero from "../components/Hero.astro";
 import MainHead from "../components/MainHead.astro";
+import ResumePDF from "../components/ResumePDF";
 import { Icon } from 'astro-icon'
 
 ---
@@ -19,16 +20,14 @@ import { Icon } from 'astro-icon'
 	</head>
 	<body>
 		<Hero pageTitle="Resume">
-			<SidebarText heading="Resume" slot="side-content">
-				<a href="/files/Carlos Montero Resume.pdf" download class='btn mr-4 w-full tracking-widest text-sm text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500' style='color: white; text-decoration: none;'>
-					<div class="flex justify-center items-center gap-2">
-						<Icon name="mdi:download" class='w-[2em]' />
-						Download resume
-					</div>
-				</a>
-			</SidebarText>
-			<div slot="main-content" class="pr-4 w-full h-full">
-				<embed src="/files/Carlos Montero Resume.pdf" class="w-full h-full" />
+			<a href="/files/Carlos Montero Resume.pdf" slot="side-content" download class='btn mr-4 w-full tracking-widest text-sm text-white bg-emerald-600 outline outline-1 outline-emerald-400 outline-offset-1 px-2 py-2 inline-block transition hover:bg-emerald-500' style='color: white; text-decoration: none;'>
+				<div class="flex justify-center items-center gap-2">
+					<Icon name="mdi:download" class='w-[2em]' />
+					Download resume
+				</div>
+			</a>
+			<div slot="main-content" class="pr-4 w-full h-screen">
+				<ResumePDF client:load/>
 			</div>
 		</Hero>
 	</body>
