--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,6 @@
-* {
+*, *::after, *::before {
 	box-sizing: border-box;
+	font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
@@ -33,22 +34,19 @@ p {
 	text-decoration: underline;
 }
 
-.projects-list {
+* {
 	scrollbar-width: thin;
 }
 
-.projects-list::-webkit-scrollbar {
-	width: 20px;
+*::-webkit-scrollbar {
+	width: 10px;
 }
 
-.projects-list::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
 	background-color: #1c1c1c;
-	border-radius: 100px;
-	margin-right: 20px;
 }
 
-.projects-list::-webkit-scrollbar-thumb {
-	border-radius: 100px;
+*::-webkit-scrollbar-thumb {
 	background-image: linear-gradient(90deg, #36d07b 0%, #2bac90 99%);
 	box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
 }
