--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -28,14 +28,14 @@ const {
 					<MobileNav client:load />
 				</div>
 			</div>
-			<div class={`bg-emerald-500 max-w-full bg-opacity-20 flex ${reverse ? "flex-col-reverse" : "flex-col"} sm:flex-row gap-4 sm:overflow-auto py-4`}>
-				<div id="content-col" class="px-4 w-full sm:w-[300px] flex-shrink-0 flex flex-col gap-4">
+			<div class={`bg-emerald-500 max-w-full bg-opacity-20 flex ${reverse ? "flex-col-reverse" : "flex-col"} md:flex-row gap-4 md:overflow-auto py-4`}>
+				<div id="content-col" class="px-4 w-full md:w-[300px] flex-shrink-0 flex flex-col gap-4">
 					<Nav />
 					<slot name='side-content' />
 				</div>
 				<div
 					id="content-ctn"
-					class="w-full projects-list"
+					class="w-full projects-list h-full"
 				>
 					<slot name='main-content' />
 				</div>
