--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,7 +35,7 @@ const {
 				</div>
 				<div
 					id="content-ctn"
-					class="w-full projects-list h-full"
+					class="w-full h-full"
 				>
 					<slot name='main-content' />
 				</div>
