--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,12 +34,17 @@ p {
 	text-decoration: underline;
 }
 
+[astro-icon] {
+	color: white;
+}
+
 * {
 	scrollbar-width: thin;
 }
 
 *::-webkit-scrollbar {
 	width: 10px;
+	background-color: #1c1c1c;
 }
 
 *::-webkit-scrollbar-track {
@@ -48,5 +53,5 @@ p {
 
 *::-webkit-scrollbar-thumb {
 	background-image: linear-gradient(90deg, #36d07b 0%, #2bac90 99%);
-	box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+	box-shadow: inset 2px 2px 5px 0 rgba(#1c1c1c, 0.5);
 }
